# reflex

./: Cargo.toml  Justfile  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: support.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yaml
.github/workflows/: release.yml
crates/reflex/: Cargo.toml
crates/reflex-core/: Cargo.toml
crates/reflex-core/src/: lib.rs  protocol.rs
crates/reflex/src/: host.rs  lib.rs  main.rs
crates/reflex/src/daemon/: client.rs
crates/reflex/src/lua/: api.rs  mod.rs  runtime.rs  types.rs
crates/reflex/src/lua/components/: signal.rs  timer.rs
crates/reflex/src/lua/stdlib/: mod.rs  str.lua
crates/reflexd/: Cargo.toml  reflexd.service
crates/reflexd/src/: lib.rs  main.rs  server.rs
crates/reflexd/src/inputs/: error.rs  keyboard.rs  keys.rs  linux.rs  mod.rs  mouse.rs
docs/: lua_api.md  reference.md
scripts/: install.bash  update.bash
src/: host.rs  lib.rs  main.rs
src/backend/wlroots/: mod.rs
src/backend/x11/: mod.rs
src/components/: mod.rs
src/inputs/: keyboard.rs  linux.rs  mod.rs  mouse.rs  table.rs
src/keypress/: error.rs  input.rs  key.rs  linux.rs  mod.rs
src/lua/: api.rs  errors.rs  mod.rs  runtime.rs  sandbox.rs  types.rs
src/lua/stdlib/: path.lua  table.lua
tests/: clipboard_notify.lua  input_bindings.lua  lua_api.rs  process.lua  signals_timers.lua  stdlib.lua  test.lua
