[workspace]
members = ["crates/reflex-core", "crates/reflex", "crates/reflexd"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
evdev = "0.12.2"
mlua = { version = "0.11.6", features = ["luajit", "vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
